--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.0.1",
     "formik": "^2.4.3",
     "goodreads": "^0.1.0",
     "mdb-react-ui-kit": "^6.2.0",
@@ -18,9 +18,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
-    "react-router": "^6.15.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.3.4",
+    "react-router-dom": "5.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
